Initial design with video and short bio

--- a/source/layouts/layout.erb
+++ b/source/layouts/layout.erb
@@ -3,14 +3,15 @@
   <head>
     <meta charset="utf-8">
     <meta http-equiv="x-ua-compatible" content="ie=edge">
-    <meta name="viewport"
-          content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <!-- Use the title from a page's frontmatter if it has one -->
-    <title><%= current_page.data.title || "Middleman" %></title>
-    <%= stylesheet_link_tag "site" %>
-    <%= javascript_include_tag "site" %>
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <title><%= current_page.data.title || "TATSURO NINAGAWA" %></title>
+    <%= stylesheet_link_tag "reset", "site" %>
   </head>
   <body>
+
     <%= yield %>
+
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+    <%= javascript_include_tag "site" %>
   </body>
 </html>
