--- a/source/index.html.erb
+++ b/source/index.html.erb
@@ -1,23 +1,103 @@
 ---
-title: Welcome to Middleman
+title: TATSURO NINAGAWA　•　蜷川　達郎　–　Hair stylist　•　美容師　–　LONDON, UK
 ---
 
-<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 400 340" class="middleman-logo" aria-labelledby="middleman-logo__title" role="img">
-  <title id="middleman-logo__title">Middleman</title>
-  <path class="middleman-logo__top-left-bar" fill-opacity=".45" d="M0 40L200 0v30L0 60z"/>
-  <path class="middleman-logo__top-right-bar" fill="#fff" d="M200 0l200 40v20L200 30z"/>
-  <path class="middleman-logo__left-m" fill-opacity=".45" d="M0 78v184l45 5V152l45 83 47-83v129l53 7V52l-57 8-43 83-43-70z"/>
-  <path class="middleman-logo__right-m" fill="#fff" d="M400 78v184l-45 5V152l-45 83-47-83v129l-53 7V52l57 8 43 83 43-70z"/>
-  <path class="middleman-logo__bottom-left-bar" fill-opacity=".45" d="M0 300l200 40v-30L0 280z"/>
-  <path class="middleman-logo__bottom-right-bar" fill="#fff" d="M200 340l200-40v-20l-200 30z"/>
-</svg>
+<main>
 
-<h1>
-  Middleman is Running
-</h1>
+  <h1>
+    Tatsuro Ninagawa
+  </h1>
 
-<%= link_to(
-  "Read Documentation",
-  "https://middlemanapp.com/basics/templating_language/",
-  target: "_blank"
-) %>
+  <video
+    autoplay
+    loop
+    muted
+    width="1920"
+    height="1080"
+    poster="/images/cutting-video-still-7.jpg"
+  >
+    <source src="/videos/cutting-1080p.webm" type="video/webm">
+    <source src="/videos/cutting-1080p.mp4" type="video/mp4">
+  </video>
+
+</main>
+
+<aside>
+  <img
+    src="/images/icon-scissors-1x.png"
+    width="20"
+    height="20"
+    srcset="/images/icon-scissors-1x.png 1x,
+            /images/icon-scissors-2x.png 2x,
+            /images/icon-scissors-3x.png 3x"
+  >
+  <p>
+    Tatsuro Ninagawa is a professional hairstylist at Shunji in London, UK. Specialized in asian and caucasian hair with his “Sassoon Cut” styling technique.
+  </p>
+  <!-- <a href="">Bio & Price List</a> -->
+  <button>Follow</button>
+  <button>Emaill</button>
+</aside>
+
+<section>
+
+  <article>
+    <h2>Bio</h2>
+    <p>
+      Tatsuro Ninagawa started his career when he was 18 years old at MINX which is one of the most famous beauty salons in Japan. He moved his second phase to Shunji Covent Garden in central London from 2019.
+    </p>
+    <p>
+      Since he has experience in two big global cities, his technique has been specialised to make you look more attractive by utilising different techniques depending on your hair textures. “Sassoon Cut” is one of his cutting techniques for people who have very soft hair mainly in Europe. He knows how to make Asian hair look more beautiful as well.
+    </p>
+    <p>
+      Taking your advantage is what he does. Your features, face frame and your hair type.
+    </p>
+    <p>
+      In order to commit to fit your hairstyle with yourself perfectly, a personal colour diagnosis method is used when he finds your best colour. He is dedicated to creating gorgeous highlights and ”harmonized” natural colours for you.
+    </p>
+    <table>
+      <tbody>
+        <tr>
+          <td></td>
+          <td></td>
+        </tr>
+        <tr>
+          <td></td>
+          <td></td>
+        </tr>
+        <tr>
+          <td></td>
+          <td></td>
+        </tr>
+        <tr>
+          <td></td>
+          <td></td>
+        </tr>
+        <tr>
+          <td></td>
+          <td></td>
+        </tr>
+      </tbody>
+    </table>
+  </article>
+
+  <article>
+    <h2>Price List</h2>
+    <table>
+      <!-- ... -->
+    </table>
+  </article>
+
+  <img src="">
+
+  <button>Close</button>
+
+  <footer>
+    Website, video and photography by <a href="http://nunocoelhosantos.com" target="_blank">Nuno Coelho Santos</a>
+  </footer>
+
+</section>
+
+<footer>
+  © 2020
+</footer>
