Buttons and shadows

--- a/source/index.html.erb
+++ b/source/index.html.erb
@@ -35,8 +35,19 @@ title: TATSURO NINAGAWA　•　蜷川　達郎　–　Hair stylist　•　美
     Tatsuro Ninagawa is a professional hairstylist at Shunji in London, UK. Specialized in asian and caucasian hair with his “Sassoon Cut” styling technique.
   </p>
   <!-- <a href="">Bio & Price List</a> -->
-  <button>Follow</button>
-  <button>Emaill</button>
+  <a
+    class="button"
+    href="http://instagram.com/i.am.tatsuro"
+    target="_blank"
+  >
+    Follow
+  </a>
+  <a
+    class="button"
+    href="mailto:tatsu@tatsuroninagawa.com"
+  >
+    Email
+  </a>
 </aside>
 
 <section>
