Add button images

--- a/source/index.html.erb
+++ b/source/index.html.erb
@@ -32,7 +32,7 @@ title: TATSURO NINAGAWA　•　蜷川　達郎　–　Hair stylist　•　美
             /images/icon-scissors-3x.png 3x"
   >
   <p>
-    Tatsuro Ninagawa is a professional hairstylist at Shunji in London, UK. Specialized in asian and caucasian hair with his “Sassoon Cut” styling technique.
+    Professional hairstylist at Shunji in London, UK. Specialized in asian and caucasian hair with the “Sassoon Cut” styling technique.
   </p>
   <!-- <a href="">Bio & Price List</a> -->
   <a
@@ -40,12 +40,28 @@ title: TATSURO NINAGAWA　•　蜷川　達郎　–　Hair stylist　•　美
     href="http://instagram.com/i.am.tatsuro"
     target="_blank"
   >
+    <img
+      src="/images/icon-instagram-1x.png"
+      width="24"
+      height="24"
+      srcset="/images/icon-instagram-1x.png 1x,
+              /images/icon-instagram-2x.png 2x,
+              /images/icon-instagram-3x.png 3x"
+    >
     Follow
   </a>
   <a
     class="button"
     href="mailto:tatsu@tatsuroninagawa.com"
   >
+    <img
+      src="/images/icon-email-1x.png"
+      width="24"
+      height="24"
+      srcset="/images/icon-email-1x.png 1x,
+              /images/icon-email-2x.png 2x,
+              /images/icon-email-3x.png 3x"
+    >
     Email
   </a>
 </aside>
