More responsive styles

--- a/source/stylesheets/site.css.scss
+++ b/source/stylesheets/site.css.scss
@@ -9,7 +9,7 @@
 }
 
 p {
-  padding: 7px 0;
+  padding: 7px 0 14px;
 }
 
 button, a.button {
@@ -21,7 +21,7 @@ button, a.button {
   border: 2px solid black;
   font-weight: 700;
   text-transform: uppercase;
-  letter-spacing: 0.5px;
+  letter-spacing: 1.5px;
   background-color: white;
   margin-top: 8px;
   margin-bottom: 8px;
@@ -32,6 +32,12 @@ button, a.button {
   img {
     margin-bottom: -6px;
     margin-right: 6px;
+  }
+  @media only screen and (max-width: 320px) {
+    padding: 15px;
+    img {
+      display: none;
+    }
   }
 }
 
@@ -68,11 +74,11 @@ main {}
 h1 {
   position: fixed;
   z-index: 2;
-  top: 50%;
+  top: 33%;
   left: 50%;
   width: 256.5px;
   height: 62px;
-  margin-left: -128.25;
+  margin-left: -128.25px;
   margin-top: -31px;
   background-size: 256.5px 62px;
   color: transparent;
@@ -91,7 +97,8 @@ h1 {
   @media only screen and (-webkit-min-device-pixel-ratio: 3) {
     background-image: url('/images/logo-3x.png');
   }
-  @media only screen and (min-width: 700px) {
+  @media only screen and (min-width: 850px) {
+    top: 50%;
     width: 513px;
     height: 124px;
     margin-left: -256.5px;
@@ -108,8 +115,11 @@ video {
   left: 0;
   object-fit: cover;
   width: 100vw;
-  height: 100vh;
+  height: 66vh;
   pointer-events: none;
+  @media only screen and (min-width: 700px) {
+    height: 100vh;
+  }
 }
 
 // Aside: Bio snippet and CTAs.
@@ -119,11 +129,28 @@ aside {
   z-index: 5;
   left: 20px;
   bottom: 20px;
-  padding: 20px 20px 42px 2px;
+  padding: 20px 2px 42px 2px;
   background-color: white;
-  width: 380px;
+  right: 20px;
   // box-shadow: 1px -1px 0 rgba(black, 0.04);
-
+  @media only screen and (min-width: 700px) {
+    width: 380px;
+    right: auto;
+    padding-right: 20px;
+  }
+  img {
+    @media only screen and (max-width: 320px) {
+      display: none;
+    }
+  }
+  button, a.button {
+    float: left;
+    width: 47%;
+    + button,
+    + a.button {
+      float: right;
+    }
+  }
 }
 
 // Section: Bio and price list.
