Add "playsinline" attribute to vide

--- a/source/index.html.erb
+++ b/source/index.html.erb
@@ -12,6 +12,7 @@ title: TATSURO NINAGAWA　•　蜷川　達郎　–　Hair stylist　•　美
     autoplay
     loop
     muted
+    playsinline
     width="1920"
     height="1080"
     poster="/images/cutting-video-still-7.jpg"
