--- a/source/stylesheets/site.css.scss
+++ b/source/stylesheets/site.css.scss
@@ -130,16 +130,17 @@ video {
 aside {
   position: fixed;
   z-index: 5;
-  left: 20px;
+  left: 0;
+  right: 0;
   bottom: 20px;
-  padding: 20px 2px 42px 2px;
+  padding: 20px 20px 42px 20px;
   background-color: white;
-  right: 20px;
   // box-shadow: 1px -1px 0 rgba(black, 0.04);
   @media only screen and (min-width: 700px) {
     width: 380px;
+    left: 20px;
     right: auto;
-    padding-right: 20px;
+    padding-left: 0;
   }
   img {
     @media only screen and (max-width: 320px) {
