Fix email address

--- a/source/index.html.erb
+++ b/source/index.html.erb
@@ -55,7 +55,7 @@ title: TATSURO NINAGAWA　•　蜷川　達郎　–　Hair stylist　•　美
   </a>
   <a
     class="button"
-    href="mailto:tatsu@tatsuroninagawa.com"
+    href="mailto:tatsurooo1003@gmail.com"
   >
     <img
       src="/images/icon-email-1x.png"
