New lower res videos, black buttons

--- a/source/index.html.erb
+++ b/source/index.html.erb
@@ -1,5 +1,5 @@
 ---
-title: TATSURO NINAGAWA　•　蜷川　達郎　–　Hair stylist　•　美容師　–　LONDON, UK
+title: Tatsuro Ninagawa • Hair stylist in London, UK
 ---
 
 <main>
@@ -17,10 +17,12 @@ title: TATSURO NINAGAWA　•　蜷川　達郎　–　Hair stylist　•　美
     height="1080"
     poster="/images/cutting-video-still-7.jpg"
   >
-    <source src="/videos/cutting-720p.mp4" type="video/mp4" media="all and (max-width: 480px)">
-    <source src="/videos/cutting-720p.webm" type="video/webm" media="all and (max-width: 480px)">
-    <source src="/videos/cutting-1080p.mp4" type="video/mp4">
-    <source src="/videos/cutting-1080p.webm" type="video/webm">
+    <source src="/videos/cutting-480p.mp4"   type="video/mp4"  media="all and (max-width: 480px)">
+    <source src="/videos/cutting-480p.webm"  type="video/webm" media="all and (max-width: 480px)">
+    <source src="/videos/cutting-720p.mp4"   type="video/mp4"  media="all and (max-width: 720px)">
+    <source src="/videos/cutting-720p.webm"  type="video/webm" media="all and (max-width: 720px)">
+    <source src="/videos/cutting-1080p.mp4"  type="video/mp4"  >
+    <source src="/videos/cutting-1080p.webm" type="video/webm" >
   </video>
 
 </main>
