Add WebM DASH video

--- a/source/index.html.erb
+++ b/source/index.html.erb
@@ -17,12 +17,9 @@ title: Tatsuro Ninagawa • Hair stylist in London, UK
     height="1080"
     poster="/images/cutting-video-still-7.jpg"
   >
-    <source src="/videos/cutting-480p.mp4"   type="video/mp4"  media="all and (max-width: 480px)">
-    <source src="/videos/cutting-480p.webm"  type="video/webm" media="all and (max-width: 480px)">
-    <source src="/videos/cutting-720p.mp4"   type="video/mp4"  media="all and (max-width: 720px)">
-    <source src="/videos/cutting-720p.webm"  type="video/webm" media="all and (max-width: 720px)">
-    <source src="/videos/cutting-1080p.mp4"  type="video/mp4"  >
-    <source src="/videos/cutting-1080p.webm" type="video/webm" >
+    <source src="/videos/cutting-video-manifest.mpd">
+    <!-- <source src="/videos/cutting-video-encoded-1080p.mp4"  type="video/mp4" >
+    <source src="/videos/cutting-video-encoded-1080p.webm" type="video/webm"> -->
   </video>
 
 </main>
