--- a/source/index.html.erb
+++ b/source/index.html.erb
@@ -18,8 +18,8 @@ title: Tatsuro Ninagawa • Hair stylist in London, UK
     poster="/images/cutting-video-still-7.jpg"
   >
     <source src="/videos/cutting-video-manifest.mpd">
-    <!-- <source src="/videos/cutting-video-encoded-1080p.mp4"  type="video/mp4" >
-    <source src="/videos/cutting-video-encoded-1080p.webm" type="video/webm"> -->
+    <source src="/videos/cutting-video-1280x720-1500k.mp4"  type="video/mp4" >
+    <source src="/videos/cutting-video-1280x720-1500k.webm" type="video/webm">
   </video>
 
 </main>
