Add loading color

--- a/source/index.html.erb
+++ b/source/index.html.erb
@@ -8,6 +8,8 @@ title: Tatsuro Ninagawa • Hair stylist in London, UK
     Tatsuro Ninagawa
   </h1>
 
+  <span id="loading-mask"></span>
+
   <video
     autoplay
     loop
