Make way with the manifest vide thing

--- a/source/index.html.erb
+++ b/source/index.html.erb
@@ -19,7 +19,7 @@ title: Tatsuro Ninagawa • Hair stylist in London, UK
     height="1080"
     poster="/images/cutting-video-still-7.jpg"
   >
-    <source src="/videos/cutting-video-manifest.mpd">
+    <!-- <source src="/videos/cutting-video-manifest.mpd"> -->
     <source src="/videos/cutting-video-1280x720-1500k.mp4"  type="video/mp4" >
     <source src="/videos/cutting-video-1280x720-1500k.webm" type="video/webm">
   </video>
