--- a/source/layouts/layout.erb
+++ b/source/layouts/layout.erb
@@ -4,10 +4,10 @@
     <meta charset="utf-8">
     <meta http-equiv="x-ua-compatible" content="ie=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <title><%= current_page.data.title || "TATSURO NINAGAWA" %></title>
+    <title><%= current_page.data.title %></title>
     <%= stylesheet_link_tag "reset", "site" %>
   </head>
-  <body>
+  <body class="<%= page_classes %>">
 
     <%= yield %>
 
