--- a/source/stylesheets/site.css.scss
+++ b/source/stylesheets/site.css.scss
@@ -1,27 +1,63 @@
 // Google Fonts' IBM Plex Sans.
 // Usage: font-family: 'IBM Plex Sans', sans-serif;
-@import url('https://fonts.googleapis.com/css2?family=IBM+Plex+Sans:wght@400;700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=IBM+Plex+Sans:wght@400;600&display=swap');
 
 // Global styles.
 
-*, p, a, button {
+html, body, div, span, applet, object, iframe,
+h1, h2, h3, h4, h5, h6, p, blockquote, pre,
+a, abbr, acronym, address, big, cite, code,
+del, dfn, em, img, ins, kbd, q, s, samp,
+small, strike, strong, sub, sup, tt, var,
+b, u, i, center, dl, dt, dd, ol, ul, li,
+fieldset, form, label, legend, button, input, textarea, select, option,
+table, caption, tbody, tfoot, thead, tr, th, td,
+article, aside, canvas, details, embed,
+figure, figcaption, footer, header, hgroup,
+menu, nav, output, ruby, section, summary,
+time, mark, audio, video {
   font-family: 'IBM Plex Sans', sans-serif;
 }
 
+h1, h2, h3, h4, h5, h6 {
+  font-weight: 600;
+  margin-bottom: 6px;
+  text-transform: uppercase;
+  letter-spacing: 1.5px;
+}
+
 p {
-  padding: 7px 0 14px;
+  padding: 6px 0 6px;
   font-size: 16px;
   line-height: 24px;
 }
 
+a {
+  font-weight: 600;
+  border-bottom: 1.5px solid rgba(black, 0.2);
+  display: inline-block;
+  height: 22px;
+}
+
+small {
+  font-size: 90%;
+  paddin-top: 20px;
+  opacity: 0.7;
+  a {
+    font-weight: normal;
+    height: 18px;
+  }
+}
+
 button, a.button {
+  cursor: pointer;
   display: inline-block;
   padding: 10px;
   text-align: center;
   color: white;
   width: 160px;
   height: 42px;
-  font-weight: 700;
+  font-weight: 600;
   text-transform: uppercase;
   letter-spacing: 1.5px;
   background-color: black;
@@ -44,6 +80,24 @@ button, a.button {
   }
 }
 
+table {
+  margin: 12px 0px;
+  th {
+    font-weight: 600;
+    text-align: left;
+  }
+  td {
+    padding: 2px 12px 2px 0px;
+    vertical-align: middle;
+  }
+  a {
+    font-weight: normal;
+  }
+  tbody + thead tr th {
+    padding-top: 12px;
+  }
+}
+
 body:before {
   // Add a fake frame to the page.
   content: "";
@@ -59,19 +113,6 @@ body:before {
     display: none;
   }
 }
-
-/* body:after {
-  // Add a shadow to the frame
-  content: "";
-  position: absolute;
-  z-index: 3;
-  top: 0;
-  right: 0;
-  bottom: 0;
-  left: 0;
-  border: 21px solid rgba(black, 0.04);
-  pointer-events: none;
-} */
 
 body.ready {
   #loading-mask {
@@ -175,7 +216,6 @@ aside {
   bottom: 0;
   padding: 20px 20px 62px 20px;
   background-color: white;
-  // box-shadow: 1px -1px 0 rgba(black, 0.04);
   @media only screen and (min-width: 700px) {
     width: 380px;
     left: 20px;
@@ -199,8 +239,128 @@ aside {
 
 // Section: Bio and price list.
 
-section {
-  display: none; // To show using JavaScript.
+section#about {
+  display: none; // To be shown using JavaScript.
+  position: absolute;
+  top: 0;
+  left: 0;
+  right: 0;
+  min-height: 100vh;
+  background-color: white;
+  z-index: 100;
+  pointer-events: none;
+  // opacity: 0;
+  padding: 100px 20px;
+  // transition: opacity 0.48s ease-out;
+  @media only screen and (min-width: 1257px) {
+    padding: 100px 50px;
+  }
+  &.visible {
+    // opacity: 1;
+    pointer-events: inherit;
+  }
+  main {
+    @media only screen and (min-width: 1257px) {
+      position: absolute;
+      top: 100px;
+      left: 50%;
+      margin-left: -608.5px;
+      max-width: 1217px;
+    }
+  }
+  article {
+    width: 100%;
+    max-width: 480px;
+    margin-bottom: 80px;
+    margin-left: auto;
+    margin-right: auto;
+    @media only screen and (min-width: 900px) {
+      float: left;
+      margin-bottom: 0;
+    }
+  }
+  article#bio {
+    @media only screen and (min-width: 900px) {
+      width: 50%;
+      padding-right: 30px;
+    }
+    @media only screen and (min-width: 1257px) {
+      width: 32%;
+    }
+  }
+  article#price-list {
+    @media only screen and (min-width: 900px) {
+      width: 50%;
+      padding-right: 0;
+    }
+    @media only screen and (min-width: 1257px) {
+      width: 38%;
+    }
+    table {
+      width: 100%;
+      @media only screen and (min-width: 900px) {
+        width: 50%;
+        display: initial;
+      }
+      td + td {
+        text-align: right;
+        padding-right: 0;
+        @media only screen and (min-width: 900px) {
+          padding-right: 30px;
+        }
+      }
+    }
+  }
+  article#portrait {
+    padding-right: 0;
+    @media only screen and (min-width: 900px) {
+      width: 33%;
+      margin-left: 33%;
+      clear: both;
+      margin-top: 50px;
+    }
+    @media only screen and (min-width: 1257px) {
+      float: left;
+      clear: inherit;
+      margin: 0;
+      width: 25%;
+    }
+    img {
+      width: 100%;
+      height: auto;
+    }
+  }
+  header {
+    position: fixed;
+    top: 0;
+    left: 0;
+    right: 0;
+    z-index: 200;
+    padding: 10px;
+    background-color: white;
+    transition: box-shadow 0.12s ease-out;
+    box-shadow: 0 0 10px rgba(black, 0);
+    &.elevated {
+      box-shadow: 0 0 10px rgba(black, 0.2);
+    }
+  }
+  button {
+    width: 50px;
+    height: 50px;
+    background-size: 26px 26px;
+    background-color: transparent;
+    color: transparent;
+    font-size: 0;
+    @media only screen and (-webkit-min-device-pixel-ratio: 1) {
+      background-image: url('/images/icon-close-1x.png');
+    }
+    @media only screen and (-webkit-min-device-pixel-ratio: 2) {
+      background-image: url('/images/icon-close-2x.png');
+    }
+    @media only screen and (-webkit-min-device-pixel-ratio: 3) {
+      background-image: url('/images/icon-close-3x.png');
+    }
+  }
 }
 
 // Footer: Copyright.
@@ -210,4 +370,14 @@ footer {
   z-index: 6;
   bottom: 20px;
   left: 20px;
+  height: 22px;
+}
+
+// Japanese locale.
+
+body.ja {
+  button, a.button {
+    letter-spacing: 0px;
+    font-weight: 600;
+  }
 }
