New redirect, placeholder image

--- a/source/layouts/layout.erb
+++ b/source/layouts/layout.erb
@@ -12,6 +12,6 @@
     <%= yield %>
 
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
-    <%= javascript_include_tag "site" %>
+    <%= javascript_include_tag "site", "js-lang-redirect" %>
   </body>
 </html>
