--- a/source/stylesheets/site.css.scss
+++ b/source/stylesheets/site.css.scss
@@ -188,6 +188,7 @@ h1 {
   height: 60vh;
   // background-color: #FF1700;
   background-color: white;
+  background-size: cover;
   background-image: url('/images/cutting-video-still-6.jpg');
   @media only screen and (min-width: 700px) {
     height: 100vh;
