--- a/source/stylesheets/site.css.scss
+++ b/source/stylesheets/site.css.scss
@@ -181,16 +181,17 @@ h1 {
   left: 0;
   right: 0;
   z-index: 1;
-  opacity: 1;
+  opacity: 0;
   pointer-events: none;
-  transition: opacity 2s ease-out 0.72s;
+  transition: opacity 2s ease-out 0.24s;
   width: 100vw;
   height: 60vh;
-  // background-color: #FF1700;
-  background-color: white;
-  background-size: cover;
-  background-image: url('/images/cutting-video-still-6.jpg');
+  background-color: #FF1700;
+  // background-color: white;
+  // background-size: cover;
+  // background-image: url('/images/cutting-video-still-6.jpg');
   @media only screen and (min-width: 700px) {
+    opacity: 1;
     height: 100vh;
   }
 }
