Change price list

--- a/source/localizable/index.html.erb
+++ b/source/localizable/index.html.erb
@@ -236,7 +236,7 @@ title: Tatsuro Ninagawa • Hair stylist in London, UK
         </thead>
         <tbody>
           <tr>
-            <td>Single Color t</td>
+            <td>Single Color </td>
             <td>£130 </td>
           </tr>
           <tr>
@@ -252,11 +252,11 @@ title: Tatsuro Ninagawa • Hair stylist in London, UK
         </thead>
         <tbody>
           <tr>
-            <td>T-Section t</td>
+            <td>T-Section </td>
             <td>£75 </td>
           </tr>
           <tr>
-            <td>Half Head t</td>
+            <td>Half Head </td>
             <td>£95 </td>
           </tr>
           <tr>
@@ -276,8 +276,16 @@ title: Tatsuro Ninagawa • Hair stylist in London, UK
             <td>£40 </td>
           </tr>
           <tr>
-            <td>Eyebrow tintt</td>
+            <td>Eyebrow tint</td>
             <td>£10</td>
+          </tr>
+          <tr>
+            <td>Japanese hair treatment</td>
+            <td>£50</td>
+          </tr>
+          <tr>
+            <td>Japanese hair straightening</td>
+            <td>£250</td>
           </tr>
         </tbody>
 
