New brand style

--- a/source/localizable/index.html.erb
+++ b/source/localizable/index.html.erb
@@ -4,9 +4,9 @@ title: Tatsuro Ninagawa • Hair stylist in London, UK
 
 <main>
 
-  <h1>
+  <!-- <h1>
     Tatsuro Ninagawa
-  </h1>
+  </h1> -->
 
   <span id="loading-mask"></span>
 
@@ -27,6 +27,9 @@ title: Tatsuro Ninagawa • Hair stylist in London, UK
 </main>
 
 <aside>
+  <h1>
+    Tatsuro <br>Ninagawa
+  </h1>
   <img
     src="/images/icon-scissors-1x.png"
     width="20"
@@ -302,7 +305,7 @@ title: Tatsuro Ninagawa • Hair stylist in London, UK
                 /images/portrait-3x.jpg 3x"
       >
       <small>
-        © 2020 <%= t(:name) %>.
+        © 2021 <%= t(:name) %>.
         <%= t(:credit) %> <a href="http://nunocoelhosantos.com" target="_blank">Nuno Coelho Santos</a>.
       </small>
     </article>
@@ -312,5 +315,5 @@ title: Tatsuro Ninagawa • Hair stylist in London, UK
 </section>
 
 <footer>
-  © 2020
+  © 2021
 </footer>
