--- a/source/stylesheets/site.css.scss
+++ b/source/stylesheets/site.css.scss
@@ -108,6 +108,7 @@ button, a.button {
     margin-left: 16px;
   }
   img {
+    display: inline-block;
     margin-bottom: -4.5px;
     margin-right: 6px;
   }
