Change email and add missing Japanese translations

--- a/source/localizable/index.html.erb
+++ b/source/localizable/index.html.erb
@@ -44,7 +44,7 @@ title: Tatsuro Ninagawa • Hair stylist in London, UK
     <%= t(:intro) %>
   </p>
   <p>
-    <a href="#bio" data-action="show-bio">Bio & Price List</a>
+    <a href="#bio" data-action="show-bio"><%= t(:label_show_bio) %></a>
   </p>
   <a
     class="button"
@@ -63,7 +63,7 @@ title: Tatsuro Ninagawa • Hair stylist in London, UK
   </a>
   <a
     class="button"
-    href="mailto:tatsurooo1003@gmail.com"
+    href="mailto:<%= t(:info_email_address) %>"
   >
     <img
       src="/images/icon-email-1x.png"
@@ -148,84 +148,84 @@ title: Tatsuro Ninagawa • Hair stylist in London, UK
 
         <thead>
           <tr>
-            <th colspan="=2">Cut & Blow Dry </th>
+            <th colspan="=2"><%= t(:price_list_1) %></th>
           </tr>
         </thead>
         <tbody>
           <tr>
-            <td>Ladies </td>
+            <td><%= t(:price_list_1a) %></td>
             <td>£55 </td>
           </tr>
           <tr>
-            <td>Mens</td>
+            <td><%= t(:price_list_1b) %></td>
             <td>£45</td>
           </tr>
         </tbody>
 
         <thead>
           <tr>
-            <th colspan="=2">Wash & Blow Dry</th>
+            <th colspan="=2"><%= t(:price_list_2) %></th>
           </tr>
         </thead>
         <tbody>
           <tr>
-            <td>Blow dry </td>
+            <td><%= t(:price_list_2a) %></td>
             <td>£45 </td>
           </tr>
           <tr>
-            <td>Quick dry</td>
+            <td><%= t(:price_list_2b) %></td>
             <td>£20</td>
           </tr>
         </tbody>
 
         <thead>
           <tr>
-            <th colspan="=2">Permanent Color </th>
+            <th colspan="=2"><%= t(:price_list_3) %></th>
           </tr>
         </thead>
         <tbody>
           <tr>
-            <td>Regrowth </td>
+            <td><%= t(:price_list_3a) %></td>
             <td>£65 </td>
           </tr>
           <tr>
-            <td>Full head - Short</td>
+            <td><%= t(:price_list_3b) %></td>
             <td>£80 </td>
           </tr>
           <tr>
-            <td>Full head - Medium </td>
+            <td><%= t(:price_list_3c) %></td>
             <td>£100 </td>
           </tr>
           <tr>
-            <td>Full head - Long</td>
+            <td><%= t(:price_list_3d) %></td>
             <td>£120</td>
           </tr>
         </tbody>
 
         <thead>
           <tr>
-            <th colspan="=2">Bleach </th>
+            <th colspan="=2"><%= t(:price_list_4) %></th>
           </tr>
         </thead>
         <tbody>
           <tr>
-            <td>Regrowth </td>
+            <td><%= t(:price_list_4a) %></td>
             <td>£80</td>
           </tr>
           <tr>
-            <td>Full head - Short </td>
+            <td><%= t(:price_list_4b) %></td>
             <td>£130 </td>
           </tr>
           <tr>
-            <td>Full head - Medium </td>
+            <td><%= t(:price_list_4c) %></td>
             <td>£160 </td>
           </tr>
           <tr>
-            <td>Full head - Long </td>
+            <td><%= t(:price_list_4d) %></td>
             <td>£200 </td>
           </tr>
           <tr>
-            <td>Seconda application</td>
+            <td><%= t(:price_list_4e) %></td>
             <td>£80</td>
           </tr>
         </tbody>
@@ -236,60 +236,60 @@ title: Tatsuro Ninagawa • Hair stylist in London, UK
 
         <thead>
           <tr>
-            <th colspan="2">Balayage</th>
+            <th colspan="2"><%= t(:price_list_5) %></th>
           </tr>
         </thead>
         <tbody>
           <tr>
-            <td>Single Color </td>
+            <td><%= t(:price_list_5a) %></td>
             <td>£130 </td>
           </tr>
           <tr>
-            <td>With Bleach</td>
+            <td><%= t(:price_list_5b) %></td>
             <td>£150</td>
           </tr>
         </tbody>
 
         <thead>
           <tr>
-            <th colspan="2">Highlight </th>
+            <th colspan="2"><%= t(:price_list_6) %></th>
           </tr>
         </thead>
         <tbody>
           <tr>
-            <td>T-Section </td>
+            <td><%= t(:price_list_6a) %></td>
             <td>£75 </td>
           </tr>
           <tr>
-            <td>Half Head </td>
+            <td><%= t(:price_list_6b) %></td>
             <td>£95 </td>
           </tr>
           <tr>
-            <td>Full Head</td>
+            <td><%= t(:price_list_6c) %></td>
             <td>£135</td>
           </tr>
         </tbody>
 
         <thead>
           <tr>
-            <th colspan="2">Extras </th>
+            <th colspan="2"><%= t(:price_list_7) %></th>
           </tr>
         </thead>
         <tbody>
           <tr>
-            <td>Olaplex, Fiberplex </td>
+            <td><%= t(:price_list_7a) %></td>
             <td>£40 </td>
           </tr>
           <tr>
-            <td>Eyebrow tint</td>
+            <td><%= t(:price_list_7b) %></td>
             <td>£10</td>
           </tr>
           <tr>
-            <td>Japanese hair treatment</td>
+            <td><%= t(:price_list_7c) %></td>
             <td>£50</td>
           </tr>
           <tr>
-            <td>Japanese hair straightening</td>
+            <td><%= t(:price_list_7d) %></td>
             <td>£250</td>
           </tr>
         </tbody>
