--- a/source/stylesheets/site.css.scss
+++ b/source/stylesheets/site.css.scss
@@ -165,6 +165,11 @@ body {
   }
 }
 
+// For Japanese text.
+.ww {
+  display: inline-block;
+}
+
 // Main: Background video and logo.
 
 @keyframes fade-in-and-out {
