Change Google maps link

--- a/source/localizable/index.html.erb
+++ b/source/localizable/index.html.erb
@@ -101,7 +101,7 @@ title: Tatsuro Ninagawa • Hair stylist in London, UK
           <tr>
             <td><b><%= t(:label_location) %></b></td>
             <td>
-              <a href="https://g.page/shunjilondon?share" target="blank">
+              <a href="https://goo.gl/maps/5qvwCyAkFrV8GqzJ7" target="blank">
                 <%= t(:info_location) %>
               </a>
             </td>
