Add book now button

--- a/source/localizable/index.html.erb
+++ b/source/localizable/index.html.erb
@@ -63,17 +63,18 @@ title: Tatsuro Ninagawa • Hair stylist in Berlin, Germany
   </a>
   <a
     class="button"
-    href="mailto:<%= t(:info_email_address) %>"
+    href="https://buchung.treatwell.de/ort/link-hair-design/?utm_source=partner&utm_medium=salon-site-embedded-book-now-widget"
+    target="_blank"
   >
     <img
-      src="/images/icon-email-1x.png"
+      src="/images/icon-calendar-1x.png"
       width="20"
       height="20"
-      srcset="/images/icon-email-1x.png 1x,
-              /images/icon-email-2x.png 2x,
-              /images/icon-email-3x.png 3x"
+      srcset="/images/icon-calendar-1x.png 1x,
+              /images/icon-calendar-2x.png 2x,
+              /images/icon-calendar-3x.png 3x"
     >
-    <%= t(:label_email) %>
+    <%= t(:label_book) %>
   </a>
 </aside>
 
