--- a/source/stylesheets/site.css.scss
+++ b/source/stylesheets/site.css.scss
@@ -91,7 +91,7 @@ small {
 button, a.button {
   cursor: pointer;
   display: inline-block;
-  padding: 8px;
+  padding: 9px;
   text-align: center;
   color: white;
   width: 160px;
@@ -101,6 +101,7 @@ button, a.button {
   letter-spacing: 1.5px;
   background-color: black;
   margin-top: 16px;
+  line-height: 24px;
   margin-bottom: 16px;
   border-radius: 9px;
   + button,
