--- a/source/localizable/index.html.erb
+++ b/source/localizable/index.html.erb
@@ -155,11 +155,11 @@ title: Tatsuro Ninagawa • Hair stylist in Berlin, Germany
         <tbody>
           <tr>
             <td><%= t(:price_list_1a) %></td>
-            <td>€48</td>
+            <td>€55</td>
           </tr>
           <tr>
             <td><%= t(:price_list_1b) %></td>
-            <td>€38</td>
+            <td>€45</td>
           </tr>
         </tbody>
 
@@ -171,23 +171,19 @@ title: Tatsuro Ninagawa • Hair stylist in Berlin, Germany
         <tbody>
           <tr>
             <td><%= t(:price_list_2a) %></td>
-            <td>€55 </td>
+            <td>€70</td>
           </tr>
           <tr>
             <td><%= t(:price_list_2b) %></td>
-            <td>€82</td>
+            <td>€110</td>
           </tr>
           <tr>
             <td><%= t(:price_list_2c) %></td>
-            <td>€102</td>
+            <td>€130</td>
           </tr>
           <tr>
             <td><%= t(:price_list_2d) %></td>
-            <td>€122</td>
-          </tr>
-          <tr>
-            <td><%= t(:price_list_2e) %></td>
-            <td>~€307</td>
+            <td>€150</td>
           </tr>
         </tbody>
 
@@ -199,11 +195,27 @@ title: Tatsuro Ninagawa • Hair stylist in Berlin, Germany
         <tbody>
           <tr>
             <td><%= t(:price_list_3a) %></td>
-            <td>~€81</td>
+            <td>€100</td>
           </tr>
           <tr>
             <td><%= t(:price_list_3b) %></td>
-            <td>€105</td>
+            <td>€130</td>
+          </tr>
+          <tr>
+            <td><%= t(:price_list_3c) %></td>
+            <td>€160</td>
+          </tr>
+          <tr>
+            <td><%= t(:price_list_3d) %></td>
+            <td>€190</td>
+          </tr>
+          <tr>
+            <td><%= t(:price_list_3e) %></td>
+            <td>€40</td>
+          </tr>
+          <tr>
+            <td><%= t(:price_list_3f) %></td>
+            <td>€80</td>
           </tr>
         </tbody>
 
@@ -215,30 +227,62 @@ title: Tatsuro Ninagawa • Hair stylist in Berlin, Germany
         <tbody>
           <tr>
             <td><%= t(:price_list_4a) %></td>
-            <td>€87</td>
+            <td>~€100</td>
           </tr>
           <tr>
             <td><%= t(:price_list_4b) %></td>
-            <td>€151</td>
-          </tr>
-          <tr>
-            <td><%= t(:price_list_4c) %></td>
-            <td>~€195</td>
+            <td>~€130</td>
           </tr>
         </tbody>
 
         <thead>
           <tr>
-            <th colspan="2"><%= t(:price_list_5) %></th>
+            <th colspan="=2"><%= t(:price_list_5) %></th>
           </tr>
         </thead>
         <tbody>
           <tr>
             <td><%= t(:price_list_5a) %></td>
-            <td>~€43</td>
+            <td>€70</td>
           </tr>
           <tr>
             <td><%= t(:price_list_5b) %></td>
+            <td>€100</td>
+          </tr>
+        </tbody>
+
+        <thead>
+          <tr>
+            <th colspan="=2"><%= t(:price_list_6) %></th>
+          </tr>
+        </thead>
+        <tbody>
+          <tr>
+            <td><%= t(:price_list_6a) %></td>
+            <td>€70</td>
+          </tr>
+          <tr>
+            <td><%= t(:price_list_6b) %></td>
+            <td>~€175</td>
+          </tr>
+          <tr>
+            <td><%= t(:price_list_6c) %></td>
+            <td>~€220</td>
+          </tr>
+        </tbody>
+
+        <thead>
+          <tr>
+            <th colspan="2"><%= t(:price_list_7) %></th>
+          </tr>
+        </thead>
+        <tbody>
+          <tr>
+            <td><%= t(:price_list_7a) %></td>
+            <td>~€30</td>
+          </tr>
+          <tr>
+            <td><%= t(:price_list_7b) %></td>
             <td>~€45</td>
           </tr>
         </tbody>
